--- a/Blocky/App.xaml
+++ b/Blocky/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Blocky.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:converters="clr-namespace:Blocky.Converters">
+             xmlns:converters="clr-namespace:Blocky.Converters"
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,6 +12,7 @@
                 <!-- Theme setting -->
                 <ResourceDictionary
                     Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+                <ResourceDictionary Source="Resources/light.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:BoolToStatusConverter x:Key="BoolToStatusConverter" />
         </ResourceDictionary>
