--- a/Blocky/Views/RuleDialog.xaml
+++ b/Blocky/Views/RuleDialog.xaml
@@ -1,4 +1,4 @@
-<mah:MetroWindow x:Class="Blocky.Views.AddRuleDialog"
+<mah:MetroWindow x:Class="Blocky.Views.RuleDialog"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,7 +6,7 @@
                  xmlns:controls="clr-namespace:Blocky.Controls"
                  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                  mc:Ignorable="d"
-                 Title="Add Rule" Height="225" Width="500" ResizeMode="NoResize">
+                 Title="{Binding Domain, StringFormat=Rule: {0}, TargetNullValue=New}" Height="225" Width="500" ResizeMode="NoResize">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -45,7 +45,7 @@
                   Margin="0,10" />
 
         <!-- Time Selection -->
-        <Grid Grid.Row="2" IsEnabled="{Binding HasTimeRestriction}">
+        <Grid Grid.Row="2" IsEnabled="{Binding HasTimeRestriction}" Margin="25 0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
